--- a/0020.완전2중화-클라우드.md
+++ b/0020.완전2중화-클라우드.md
@@ -1,199 +1,486 @@
-# 인터넷 2중화-클라우드 사용
-
-<img width="2485" height="1182" alt="image" src="https://github.com/user-attachments/assets/1a08f4af-4f33-4d2b-870b-2d23c6db4dd8" />
-
+# Chapter 3. AWS 하이브리드 클라우드 통합을 위한 엔터프라이즈 네트워크 인프라 설계
+<img width="2551" height="1283" alt="image" src="https://github.com/user-attachments/assets/b2180692-1509-440c-bceb-5129bd597ba8" />
 
 
-## 엔터프라이즈 이중화 백본 네트워크 설계 (Enterprise Redundant Backbone Network Design)
+## 1. 개요 및 설계 원칙
 
-본 장에서는 제안된 최종 네트워크 토폴로지를 기반으로 고가용성(High Availability)과 로드 밸런싱을 고려한 엔터프라이즈급 네트워크 구성을 다룹니다. 특히 물리적/논리적으로 이중화된 백본 스위치(L3 Switch)의 장비별 독립적인 설정 과정을 상세히 명세합니다.
+본 섹션에서는 업데이트된 토폴로지를 기반으로, AWS 하이브리드 클라우드 연동을 대비한 엔터프라이즈 네트워크 인프라 구성을 다룹니다.
 
-> **AWS 클라우드 연동 주의사항**:
-> 본 설계에 포함된 AWS 클라우드 연결(10.x.x.x 대역)을 실제로 구현할 경우, AWS VPC, VPN Gateway, Direct Connect 등의 리소스 사용에 따라 **비용이 청구(Billable)**됩니다. 실습 전 프리 티어 적용 여부 및 과금 정책을 반드시 확인해야 합니다.
+### 1.1 설계 핵심 사항
 
----
-
-### 1. 네트워크 구성 개요 및 특징
-
-이 토폴로지는 단일 실패 지점(SPOF)을 제거하고, 본사(HQ)와 지사(Branch), 그리고 클라우드(AWS) 구간을 유기적으로 연결하도록 설계되었습니다.
-
-1. **WAN 이중화**:
-* ISP 1(111.xxx)과 ISP 2(222.xxx)를 통해 서로 다른 경로로 인터넷/외부망에 연결하여 회선 장애에 대비합니다.
-
-
-2. **Core/Distribution Layer (백본 이중화)**:
-* `Multilayer Switch0`과 `Multilayer Switch1`이 핵심 백본 역할을 수행합니다.
-* 두 스위치는 **FHRP(HSRP/VRRP)** 프로토콜을 통해 게이트웨이 이중화를 제공하며, 내부 사용자(VLAN 10, 20 등)에게 끊김 없는 네트워크를 제공합니다.
-
-
-3. **Transit Routing**:
-* `Router4`와 `Router6`을 통해 지사(Branch) 네트워크(192.170.x.x)와 백본 간의 라우팅을 중계합니다.
-
-
-4. **Security & Cloud Policy**:
-* AWS와의 연동을 고려하여 내부망은 공인 IP와 충돌하지 않는 사설 IP 대역(172.16.x.x, 192.168.x.x)을 사용하며, AWS VPC 대역(10.x.x.x)을 별도로 예약합니다.
-
-
+* **VLAN 확장:** 부서 및 서버 그룹의 세분화를 위해 HQ에는 VLAN 10, 30, 40, 50을, 지사(Branch)에는 VLAN 150, 160, 170, 180을 할당합니다.
+* **IP 주소 분리:** AWS VPC(`10.0.0.0/16`)와의 충돌 방지를 위해 사설망은 `172.16.x.x` 및 `192.168.x.x`(HQ), `192.170.x.x`(Branch) 대역을 엄격히 구분하여 사용합니다.
+* **HSRP 이중화:** MSW1을 Active(Priority 110), MSW2를 Standby(Priority 100)로 설정하여 모든 VLAN에 대한 게이트웨이 이중화를 구현합니다.
 
 ---
 
-### 2. 장비별 상세 IP 구성 목록 (Network Configuration List)
+## 2. 장비별 상세 CLI 구성 (Detailed CLI Configuration by Device)
 
-아래 표는 토폴로지 다이어그램에 명시된 연결 정보를 기반으로 한 인터페이스 및 IP 할당 내역입니다.
+이미지의 토폴로지에 맞춰 확장된 VLAN 구성을 포함한 각 장비별 설정 과정입니다.
 
-#### A. WAN & Core Layer (본사)
+### 2.1 HQ Edge Router 1 (R1)
 
-| 장비명 (Device) | 인터페이스 (Interface) | IP 주소 (IP Address/Subnet) | 설명 (Description) |
-| --- | --- | --- | --- |
-| **Router3** | G0/0 (WAN) | 111.111.111.2 /30 | ISP 1 연결 (Cloud-PT) |
-|  | G0/1 (LAN) | 172.16.1.1 /24 | Backbone 0 연결 |
-| **Router(2)** | G0/0 (WAN) | 222.222.222.2 /30 | ISP 2 연결 (Cloud-PT) |
-|  | G0/1 (LAN) | 172.16.2.1 /24 | Backbone 1 연결 |
-| **MultiLayer Switch0** | Routed Port 1 | 172.16.1.2 /24 | Router3 업링크 |
-|  | Routed Port 2 | 172.16.3.2 /24 | Switch13 연결 |
-|  | Routed Port 3 | 172.16.5.2 /24 | Router4 연결 |
-|  | **VLAN 10 (SVI)** | **192.168.10.2 /24** | 내부망 게이트웨이 (Physical) |
-|  | **VLAN 10 (VIP)** | **192.168.10.1 /24** | **HSRP 가상 게이트웨이** |
-| **MultiLayer Switch1** | Routed Port 1 | 172.16.2.2 /24 | Router(2) 업링크 |
-|  | Routed Port 2 | 172.16.4.2 /24 | Switch13 연결 |
-|  | Routed Port 3 | 172.16.6.2 /24 | Router4 연결 |
-|  | **VLAN 10 (SVI)** | **192.168.10.3 /24** | 내부망 게이트웨이 (Physical) |
-|  | **VLAN 10 (VIP)** | **192.168.10.1 /24** | **HSRP 가상 게이트웨이** |
+ISP 1회선 및 내부 코어 스위치(MSW1, MSW2)와 연결합니다.
 
-#### B. Distribution & Access Layer (지사 및 내부망)
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname R1
 
-| 장비명 (Device) | 인터페이스 | IP 주소 (IP Address/Subnet) | 설명 |
-| --- | --- | --- | --- |
-| **Switch13** | Uplink 1 | 172.16.3.1 /30 | Backbone 0 연결 |
-|  | Uplink 2 | 172.16.4.1 /24 | Backbone 1 연결 |
-| **Router4** | G0/0 | 172.16.5.1 /24 | Backbone 0 다운링크 |
-|  | G0/1 | 172.16.6.1 /24 | Backbone 1 다운링크 |
-|  | G0/2 | 172.16.7.2 /24 | Router6 연결 |
-| **Router6** | G0/0 | 172.16.7.1 /24 | Router4 업링크 |
-|  | G0/1 | 172.16.8.1 /24 | Right-Side Switch7 연결 |
-| **MultiLayer Switch7** | Uplink | 172.16.8.2 /24 | Router6 연결 |
-|  | VLAN 150 | 192.170.150.1 /24 | 지사 내부망 게이트웨이 |
+! -- 1. WAN (ISP1) 인터페이스 설정 --
+R1(config)# interface GigabitEthernet0/0
+R1(config-if)# description Link_to_ISP1
+R1(config-if)# ip address 111.111.111.2 255.255.255.252
+R1(config-if)# no shutdown
+R1(config-if)# exit
 
----
+! -- 2. LAN (Core Switch) 인터페이스 설정 --
+R1(config)# interface GigabitEthernet0/1
+R1(config-if)# description Link_to_MSW1
+R1(config-if)# ip address 172.16.1.1 255.255.255.0
+R1(config-if)# no shutdown
+R1(config-if)# exit
 
-### 3. 이중화 백본 장비별 상세 설정 (Detailed Configuration per Backbone Device)
+R1(config)# interface GigabitEthernet0/2
+R1(config-if)# description Link_to_MSW2
+R1(config-if)# ip address 172.16.4.1 255.255.255.0
+R1(config-if)# no shutdown
+R1(config-if)# exit
 
-백본 스위치의 설정은 **Active(Switch0)**와 **Standby(Switch1)**로 명확히 구분됩니다. 각 장비에 접속하여 아래 설정을 순차적으로 적용합니다.
+! -- 3. OSPF 라우팅 설정 --
+R1(config)# router ospf 1
+R1(config-router)# router-id 1.1.1.1
+R1(config-router)# network 172.16.0.0 0.0.255.255 area 0
+R1(config-router)# default-information originate
+R1(config-router)# exit
 
-#### A. Multilayer Switch0 (Active Backbone) 설정
+! -- 4. Default Route 설정 --
+R1(config)# ip route 0.0.0.0 0.0.0.0 111.111.111.1
+R1(config)# end
+R1# write memory
 
-이 장비는 **HSRP Priority 110**을 부여하여 평상시 주(Active) 경로로 동작합니다.
+```
+
+### 2.2 HQ Edge Router 2 (R2)
+
+ISP 2회선 및 내부 코어 스위치와 연결되는 예비 경로 라우터입니다.
+
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname R2
+
+! -- 1. WAN (ISP2) 인터페이스 설정 --
+R2(config)# interface GigabitEthernet0/0
+R2(config-if)# description Link_to_ISP2
+R2(config-if)# ip address 222.222.222.2 255.255.255.252
+R2(config-if)# no shutdown
+R2(config-if)# exit
+
+! -- 2. LAN (Core Switch) 인터페이스 설정 --
+R2(config)# interface GigabitEthernet0/1
+R2(config-if)# description Link_to_MSW2
+R2(config-if)# ip address 172.16.2.1 255.255.255.0
+R2(config-if)# no shutdown
+R2(config-if)# exit
+
+R2(config)# interface GigabitEthernet0/2
+R2(config-if)# description Link_to_MSW1
+R2(config-if)# ip address 172.16.3.1 255.255.255.0
+R2(config-if)# no shutdown
+R2(config-if)# exit
+
+! -- 3. OSPF 라우팅 설정 --
+R2(config)# router ospf 1
+R2(config-router)# router-id 2.2.2.2
+R2(config-router)# network 172.16.0.0 0.0.255.255 area 0
+R2(config-router)# default-information originate
+R2(config-router)# exit
+
+! -- 4. Default Route 설정 --
+R2(config)# ip route 0.0.0.0 0.0.0.0 222.222.222.1
+R2(config)# end
+R2# write memory
+
+```
+
+### 2.3 HQ Core Switch 1 (MSW1) - **Active Gateway**
+
+새롭게 추가된 VLAN(30, 40, 50)을 포함하여 모든 VLAN에 대해 **HSRP Active (Priority 110)** 설정을 적용합니다.
 
 ```bash
 Switch> enable
 Switch# configure terminal
-Switch(config)# hostname Backbone-Active
+Switch(config)# hostname MSW1
+Switch(config)# ip routing
 
-! 1. 라우팅 기능 활성화
-Backbone-Active(config)# ip routing
+! -- 1. VLAN 데이터베이스 생성 (확장됨) --
+MSW1(config)# vlan 10
+MSW1(config-vlan)# name HQ_User
+MSW1(config-vlan)# exit
+MSW1(config)# vlan 30
+MSW1(config-vlan)# name HQ_Server_Grp1
+MSW1(config-vlan)# exit
+MSW1(config)# vlan 40
+MSW1(config-vlan)# name HQ_Server_Grp2
+MSW1(config-vlan)# exit
+MSW1(config)# vlan 50
+MSW1(config-vlan)# name HQ_Server_Grp3
+MSW1(config-vlan)# exit
 
-! 2. VLAN 생성 반복
-Backbone-Active(config)# vlan 10
-Backbone-Active(config-vlan)# name Sales_Dept
-Backbone-Active(config-vlan)# exit
+! -- 2. SVI 및 HSRP Active 설정 (Priority 110 & Preempt) --
+! VLAN 10
+MSW1(config)# interface Vlan10
+MSW1(config-if)# ip address 192.168.10.2 255.255.255.0
+MSW1(config-if)# standby 10 ip 192.168.10.1
+MSW1(config-if)# standby 10 priority 110
+MSW1(config-if)# standby 10 preempt
+MSW1(config-if)# no shutdown
+MSW1(config-if)# exit
 
-! 3. L3 인터페이스 설정 (업링크 - Router3 연결)
-Backbone-Active(config)# interface GigabitEthernet 1/0/1
-Backbone-Active(config-if)# no switchport
-Backbone-Active(config-if)# ip address 172.16.1.2 255.255.255.0
-Backbone-Active(config-if)# no shutdown
-Backbone-Active(config-if)# exit
+! VLAN 30
+MSW1(config)# interface Vlan30
+MSW1(config-if)# ip address 192.168.30.2 255.255.255.0
+MSW1(config-if)# standby 30 ip 192.168.30.1
+MSW1(config-if)# standby 30 priority 110
+MSW1(config-if)# standby 30 preempt
+MSW1(config-if)# no shutdown
+MSW1(config-if)# exit
 
-! 4. L3 인터페이스 설정 (다운링크 - Switch13 연결)
-Backbone-Active(config)# interface GigabitEthernet 1/0/2
-Backbone-Active(config-if)# no switchport
-Backbone-Active(config-if)# ip address 172.16.3.2 255.255.255.0
-Backbone-Active(config-if)# no shutdown
-Backbone-Active(config-if)# exit
+! VLAN 40
+MSW1(config)# interface Vlan40
+MSW1(config-if)# ip address 192.168.40.2 255.255.255.0
+MSW1(config-if)# standby 40 ip 192.168.40.1
+MSW1(config-if)# standby 40 priority 110
+MSW1(config-if)# standby 40 preempt
+MSW1(config-if)# no shutdown
+MSW1(config-if)# exit
 
-! 5. L3 인터페이스 설정 (다운링크 - Router4 연결)
-Backbone-Active(config)# interface GigabitEthernet 1/0/3
-Backbone-Active(config-if)# no switchport
-Backbone-Active(config-if)# ip address 172.16.5.2 255.255.255.0
-Backbone-Active(config-if)# no shutdown
-Backbone-Active(config-if)# exit
+! VLAN 50
+MSW1(config)# interface Vlan50
+MSW1(config-if)# ip address 192.168.50.2 255.255.255.0
+MSW1(config-if)# standby 50 ip 192.168.50.1
+MSW1(config-if)# standby 50 priority 110
+MSW1(config-if)# standby 50 preempt
+MSW1(config-if)# no shutdown
+MSW1(config-if)# exit
 
-! 6. SVI (VLAN 인터페이스) 및 HSRP Active 설정 (Priority 110)
-Backbone-Active(config)# interface vlan 10
-Backbone-Active(config-if)# ip address 192.168.10.2 255.255.255.0
-Backbone-Active(config-if)# standby 1 ip 192.168.10.1       ! 가상 게이트웨이 IP
-Backbone-Active(config-if)# standby 1 priority 110          ! 우선순위 110 (높음)
-Backbone-Active(config-if)# standby 1 preempt               ! 복구 시 Active 권한 회수
-Backbone-Active(config-if)# no shutdown
-Backbone-Active(config-if)# exit
+! -- 3. Uplink (Routed Ports) --
+MSW1(config)# interface GigabitEthernet1/0/1
+MSW1(config-if)# description Link_to_R1
+MSW1(config-if)# no switchport
+MSW1(config-if)# ip address 172.16.1.2 255.255.255.0
+MSW1(config-if)# no shutdown
+MSW1(config-if)# exit
 
-! 7. OSPF 라우팅 설정
-Backbone-Active(config)# router ospf 1
-Backbone-Active(config-router)# router-id 1.1.1.1
-Backbone-Active(config-router)# network 172.16.1.0 0.0.0.255 area 0
-Backbone-Active(config-router)# network 172.16.3.0 0.0.0.255 area 0
-Backbone-Active(config-router)# network 172.16.5.0 0.0.0.255 area 0
-Backbone-Active(config-router)# network 192.168.10.0 0.0.0.255 area 0
+MSW1(config)# interface GigabitEthernet1/0/2
+MSW1(config-if)# description Link_to_R2
+MSW1(config-if)# no switchport
+MSW1(config-if)# ip address 172.16.3.2 255.255.255.0
+MSW1(config-if)# no shutdown
+MSW1(config-if)# exit
+
+MSW1(config)# interface GigabitEthernet1/0/24
+MSW1(config-if)# description Link_to_R3
+MSW1(config-if)# no switchport
+MSW1(config-if)# ip address 172.16.5.1 255.255.255.0
+MSW1(config-if)# no shutdown
+MSW1(config-if)# exit
+
+! -- 4. Downlink (Trunk to Access Switches) --
+MSW1(config)# interface range GigabitEthernet1/0/3 - 4
+MSW1(config-if-range)# description Link_to_Access_Switches
+MSW1(config-if-range)# switchport trunk encapsulation dot1q
+MSW1(config-if-range)# switchport mode trunk
+MSW1(config-if-range)# no shutdown
+MSW1(config-if-range)# exit
+
+! -- 5. OSPF 설정 --
+MSW1(config)# router ospf 1
+MSW1(config-router)# router-id 10.10.10.1
+MSW1(config-router)# network 172.16.0.0 0.0.255.255 area 0
+MSW1(config-router)# network 192.168.10.0 0.0.0.255 area 0
+MSW1(config-router)# network 192.168.30.0 0.0.0.255 area 0
+MSW1(config-router)# network 192.168.40.0 0.0.0.255 area 0
+MSW1(config-router)# network 192.168.50.0 0.0.0.255 area 0
+MSW1(config-router)# end
+MSW1# write memory
 
 ```
 
-#### B. Multilayer Switch1 (Standby Backbone) 설정
+### 2.4 HQ Core Switch 2 (MSW2) - **Standby Gateway**
 
-이 장비는 **HSRP Priority 100(기본값)**을 유지하여 평상시 대기(Standby) 상태로 동작하며, Active 장비 장애 시 즉시 역할을 수행합니다.
+모든 VLAN(10, 30, 40, 50)에 대해 **HSRP Standby (Priority 100)** 설정을 적용합니다.
 
 ```bash
 Switch> enable
 Switch# configure terminal
-Switch(config)# hostname Backbone-Standby
+Switch(config)# hostname MSW2
+Switch(config)# ip routing
 
-! 1. 라우팅 기능 활성화
-Backbone-Standby(config)# ip routing
+! -- 1. VLAN 데이터베이스 생성 --
+MSW2(config)# vlan 10
+MSW2(config)# vlan 30
+MSW2(config)# vlan 40
+MSW2(config)# vlan 50
 
-! 2. VLAN 생성
-Backbone-Standby(config)# vlan 10
-Backbone-Standby(config-vlan)# name Sales_Dept
-Backbone-Standby(config-vlan)# exit
+! -- 2. SVI 및 HSRP Standby 설정 --
+! VLAN 10
+MSW2(config)# interface Vlan10
+MSW2(config-if)# ip address 192.168.10.3 255.255.255.0
+MSW2(config-if)# standby 10 ip 192.168.10.1
+MSW2(config-if)# no shutdown
+MSW2(config-if)# exit
 
-! 3. L3 인터페이스 설정 (업링크 - Router2 연결)
-Backbone-Standby(config)# interface GigabitEthernet 1/0/1
-Backbone-Standby(config-if)# no switchport
-Backbone-Standby(config-if)# ip address 172.16.2.2 255.255.255.0
-Backbone-Standby(config-if)# no shutdown
-Backbone-Standby(config-if)# exit
+! VLAN 30
+MSW2(config)# interface Vlan30
+MSW2(config-if)# ip address 192.168.30.3 255.255.255.0
+MSW2(config-if)# standby 30 ip 192.168.30.1
+MSW2(config-if)# no shutdown
+MSW2(config-if)# exit
 
-! 4. L3 인터페이스 설정 (다운링크 - Switch13 연결)
-Backbone-Standby(config)# interface GigabitEthernet 1/0/2
-Backbone-Standby(config-if)# no switchport
-Backbone-Standby(config-if)# ip address 172.16.4.2 255.255.255.0
-Backbone-Standby(config-if)# no shutdown
-Backbone-Standby(config-if)# exit
+! VLAN 40
+MSW2(config)# interface Vlan40
+MSW2(config-if)# ip address 192.168.40.3 255.255.255.0
+MSW2(config-if)# standby 40 ip 192.168.40.1
+MSW2(config-if)# no shutdown
+MSW2(config-if)# exit
 
-! 5. L3 인터페이스 설정 (다운링크 - Router4 연결)
-Backbone-Standby(config)# interface GigabitEthernet 1/0/3
-Backbone-Standby(config-if)# no switchport
-Backbone-Standby(config-if)# ip address 172.16.6.2 255.255.255.0
-Backbone-Standby(config-if)# no shutdown
-Backbone-Standby(config-if)# exit
+! VLAN 50
+MSW2(config)# interface Vlan50
+MSW2(config-if)# ip address 192.168.50.3 255.255.255.0
+MSW2(config-if)# standby 50 ip 192.168.50.1
+MSW2(config-if)# no shutdown
+MSW2(config-if)# exit
 
-! 6. SVI (VLAN 인터페이스) 및 HSRP Standby 설정 (Priority 100)
-Backbone-Standby(config)# interface vlan 10
-Backbone-Standby(config-if)# ip address 192.168.10.3 255.255.255.0
-Backbone-Standby(config-if)# standby 1 ip 192.168.10.1       ! 동일한 가상 게이트웨이 IP
-Backbone-Standby(config-if)# standby 1 priority 100          ! 우선순위 100 (기본값)
-Backbone-Standby(config-if)# standby 1 preempt               ! Preempt 활성화
-Backbone-Standby(config-if)# no shutdown
-Backbone-Standby(config-if)# exit
+! -- 3. Uplink (Routed Ports) --
+MSW2(config)# interface GigabitEthernet1/0/1
+MSW2(config-if)# description Link_to_R2
+MSW2(config-if)# no switchport
+MSW2(config-if)# ip address 172.16.2.2 255.255.255.0
+MSW2(config-if)# no shutdown
+MSW2(config-if)# exit
 
-! 7. OSPF 라우팅 설정
-Backbone-Standby(config)# router ospf 1
-Backbone-Standby(config-router)# router-id 2.2.2.2
-Backbone-Standby(config-router)# network 172.16.2.0 0.0.0.255 area 0
-Backbone-Standby(config-router)# network 172.16.4.0 0.0.0.255 area 0
-Backbone-Standby(config-router)# network 172.16.6.0 0.0.0.255 area 0
-Backbone-Standby(config-router)# network 192.168.10.0 0.0.0.255 area 0
+MSW2(config)# interface GigabitEthernet1/0/2
+MSW2(config-if)# description Link_to_R1
+MSW2(config-if)# no switchport
+MSW2(config-if)# ip address 172.16.4.2 255.255.255.0
+MSW2(config-if)# no shutdown
+MSW2(config-if)# exit
+
+MSW2(config)# interface GigabitEthernet1/0/24
+MSW2(config-if)# description Link_to_R3
+MSW2(config-if)# no switchport
+MSW2(config-if)# ip address 172.16.5.2 255.255.255.0
+MSW2(config-if)# no shutdown
+MSW2(config-if)# exit
+
+! -- 4. Downlink (Trunk to Access Switches) --
+MSW2(config)# interface range GigabitEthernet1/0/3 - 4
+MSW2(config-if-range)# description Link_to_Access_Switches
+MSW2(config-if-range)# switchport trunk encapsulation dot1q
+MSW2(config-if-range)# switchport mode trunk
+MSW2(config-if-range)# no shutdown
+MSW2(config-if-range)# exit
+
+! -- 5. OSPF 설정 --
+MSW2(config)# router ospf 1
+MSW2(config-router)# router-id 10.10.10.2
+MSW2(config-router)# network 172.16.0.0 0.0.255.255 area 0
+MSW2(config-router)# network 192.168.10.0 0.0.0.255 area 0
+MSW2(config-router)# network 192.168.30.0 0.0.0.255 area 0
+MSW2(config-router)# network 192.168.40.0 0.0.0.255 area 0
+MSW2(config-router)# network 192.168.50.0 0.0.0.255 area 0
+MSW2(config-router)# end
+MSW2# write memory
 
 ```
 
----
+### 2.5 HQ Access Switch (서버 및 사용자용)
 
-**Next Level :** AWS VPC 연동을 위한 Site-to-Site VPN 구성 및 BGP 라우팅 설정
+**사용자 PC 및 서버가 연결되는 포트에 VLAN을 할당**합니다. 도면에 따라 VLAN 10, 30, 40, 50을 물리 포트에 매핑합니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname HQ_Access_SW
+
+! -- 1. VLAN 생성 --
+HQ_Access_SW(config)# vlan 10
+HQ_Access_SW(config)# vlan 30
+HQ_Access_SW(config)# vlan 40
+HQ_Access_SW(config)# vlan 50
+
+! -- 2. Uplink 설정 (Core 연결 Trunk) --
+HQ_Access_SW(config)# interface range GigabitEthernet0/1 - 2
+HQ_Access_SW(config-if-range)# description Uplink_to_MSW
+HQ_Access_SW(config-if-range)# switchport trunk encapsulation dot1q
+HQ_Access_SW(config-if-range)# switchport mode trunk
+HQ_Access_SW(config-if-range)# no shutdown
+HQ_Access_SW(config-if-range)# exit
+
+! -- 3. Access Port 할당 (VLAN 10: PC) --
+HQ_Access_SW(config)# interface FastEthernet0/1
+HQ_Access_SW(config-if)# description User_PC_Vlan10
+HQ_Access_SW(config-if)# switchport mode access
+HQ_Access_SW(config-if)# switchport access vlan 10
+HQ_Access_SW(config-if)# no shutdown
+HQ_Access_SW(config-if)# exit
+
+! -- 4. Access Port 할당 (VLAN 30: Groupware Server) --
+HQ_Access_SW(config)# interface FastEthernet0/10
+HQ_Access_SW(config-if)# description Server_Groupware_Vlan30
+HQ_Access_SW(config-if)# switchport mode access
+HQ_Access_SW(config-if)# switchport access vlan 30
+HQ_Access_SW(config-if)# no shutdown
+HQ_Access_SW(config-if)# exit
+
+! -- 5. Access Port 할당 (VLAN 40: Server 12/13) --
+HQ_Access_SW(config)# interface range FastEthernet0/11 - 12
+HQ_Access_SW(config-if-range)# description Servers_Vlan40
+HQ_Access_SW(config-if-range)# switchport mode access
+HQ_Access_SW(config-if-range)# switchport access vlan 40
+HQ_Access_SW(config-if-range)# no shutdown
+HQ_Access_SW(config-if-range)# exit
+
+! -- 6. Access Port 할당 (VLAN 50: Server 14) --
+HQ_Access_SW(config)# interface FastEthernet0/13
+HQ_Access_SW(config-if)# description Server_Vlan50
+HQ_Access_SW(config-if)# switchport mode access
+HQ_Access_SW(config-if)# switchport access vlan 50
+HQ_Access_SW(config-if)# no shutdown
+HQ_Access_SW(config-if)# end
+HQ_Access_SW# write memory
+
+```
+
+### 2.6 HQ Internal Router (R3)
+
+본사 코어 스위치와 지사를 연결합니다.
+
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname R3
+
+! -- 1. 본사 Core 연결 --
+R3(config)# interface GigabitEthernet0/0
+R3(config-if)# description Link_to_HQ_Core
+R3(config-if)# ip address 172.16.5.254 255.255.255.0
+R3(config-if)# no shutdown
+R3(config-if)# exit
+
+! -- 2. 지사 WAN 연결 --
+R3(config)# interface GigabitEthernet0/1
+R3(config-if)# description Link_to_Branch_R4
+R3(config-if)# ip address 172.16.6.1 255.255.255.0
+R3(config-if)# no shutdown
+R3(config-if)# exit
+
+! -- 3. OSPF 설정 --
+R3(config)# router ospf 1
+R3(config-router)# network 172.16.0.0 0.0.255.255 area 0
+R3(config-router)# end
+R3# write memory
+
+```
+
+### 2.7 Branch Edge Router (R4)
+
+지사 관문 라우터입니다.
+
+```bash
+Router> enable
+Router# configure terminal
+Router(config)# hostname R4
+
+! -- 1. 본사 WAN 연결 --
+R4(config)# interface GigabitEthernet0/0
+R4(config-if)# description Link_to_HQ_R3
+R4(config-if)# ip address 172.16.6.2 255.255.255.0
+R4(config-if)# no shutdown
+R4(config-if)# exit
+
+! -- 2. 지사 내부 연결 --
+R4(config)# interface GigabitEthernet0/1
+R4(config-if)# description Link_to_Branch_Switch
+R4(config-if)# ip address 172.16.8.1 255.255.255.0
+R4(config-if)# no shutdown
+R4(config-if)# exit
+
+! -- 3. OSPF 설정 --
+R4(config)# router ospf 1
+R4(config-router)# network 172.16.0.0 0.0.255.255 area 0
+R4(config-router)# end
+R4# write memory
+
+```
+
+### 2.8 Branch Core Switch (L3_Branch) & Access
+
+지사는 **VLAN 150, 160, 170, 180**을 사용하여 네트워크를 분리합니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname L3_Branch
+Switch(config)# ip routing
+
+! -- 1. VLAN 생성 --
+L3_Branch(config)# vlan 150
+L3_Branch(config)# vlan 160
+L3_Branch(config)# vlan 170
+L3_Branch(config)# vlan 180
+
+! -- 2. SVI (Gateway) 설정 (지사 IP 대역: 192.170.x.x) --
+L3_Branch(config)# interface Vlan150
+L3_Branch(config-if)# ip address 192.170.150.1 255.255.255.0
+L3_Branch(config-if)# no shutdown
+L3_Branch(config-if)# exit
+
+L3_Branch(config)# interface Vlan160
+L3_Branch(config-if)# ip address 192.170.160.1 255.255.255.0
+L3_Branch(config-if)# no shutdown
+L3_Branch(config-if)# exit
+
+L3_Branch(config)# interface Vlan170
+L3_Branch(config-if)# ip address 192.170.170.1 255.255.255.0
+L3_Branch(config-if)# no shutdown
+L3_Branch(config-if)# exit
+
+L3_Branch(config)# interface Vlan180
+L3_Branch(config-if)# ip address 192.170.180.1 255.255.255.0
+L3_Branch(config-if)# no shutdown
+L3_Branch(config-if)# exit
+
+! -- 3. Uplink to Router --
+L3_Branch(config)# interface GigabitEthernet0/1
+L3_Branch(config-if)# description Uplink_to_R4
+L3_Branch(config-if)# no switchport
+L3_Branch(config-if)# ip address 172.16.8.2 255.255.255.0
+L3_Branch(config-if)# no shutdown
+L3_Branch(config-if)# exit
+
+! -- 4. Access Port 설정 (지사 PC - VLAN 150 할당) --
+L3_Branch(config)# interface FastEthernet0/1
+L3_Branch(config-if)# description Link_to_Branch_PC
+L3_Branch(config-if)# switchport mode access
+L3_Branch(config-if)# switchport access vlan 150
+L3_Branch(config-if)# no shutdown
+L3_Branch(config-if)# exit
+
+! -- 5. OSPF 설정 --
+L3_Branch(config)# router ospf 1
+L3_Branch(config-router)# network 172.16.8.0 0.0.0.255 area 0
+L3_Branch(config-router)# network 192.170.150.0 0.0.0.255 area 0
+L3_Branch(config-router)# network 192.170.160.0 0.0.0.255 area 0
+L3_Branch(config-router)# network 192.170.170.0 0.0.0.255 area 0
+L3_Branch(config-router)# network 192.170.180.0 0.0.0.255 area 0
+L3_Branch(config-router)# end
+L3_Branch# write memory
+
+```
+
+> **AWS 과금 주의(Cost Alert):** 위 설정은 온프레미스 장비 구성입니다. 추후 AWS VPC와 연동을 시작하는 순간(VPN 터널 Up), AWS 측에서는 VPN 연결 시간(Hourly) 및 아웃바운드 트래픽에 대한 과금이 발생합니다.
+
+Next Level : AWS VPC 생성 및 Site-to-Site VPN 연결 설정
