--- a/0020.완전2중화-클라우드.md
+++ b/0020.완전2중화-클라우드.md
@@ -1,5 +1,6 @@
 # Chapter 3. AWS 하이브리드 클라우드 통합을 위한 엔터프라이즈 네트워크 인프라 설계
-<img width="2551" height="1283" alt="image" src="https://github.com/user-attachments/assets/b2180692-1509-440c-bceb-5129bd597ba8" />
+<img width="2513" height="1261" alt="image" src="https://github.com/user-attachments/assets/761bd577-0ca7-4320-8240-133c03de6bdc" />
+
 
 
 ## 1. 개요 및 설계 원칙
@@ -481,6 +482,232 @@ L3_Branch# write memory
 
 ```
 
-> **AWS 과금 주의(Cost Alert):** 위 설정은 온프레미스 장비 구성입니다. 추후 AWS VPC와 연동을 시작하는 순간(VPN 터널 Up), AWS 측에서는 VPN 연결 시간(Hourly) 및 아웃바운드 트래픽에 대한 과금이 발생합니다.
+# Chapter 3. Enterprise Network Infrastructure Design (Layer 2 Switching Configuration)
+
+## 1. 개요 및 L2 설계 방향
+
+본 섹션에서는 물리적 연결과 논리적 VLAN 구성을 담당하는 Layer 2 스위치(액세스 계층 및 백본 연결용)의 상세 설정을 다룹니다. 도면의 토폴로지를 기반으로 각 스위치의 역할에 맞는 VLAN 할당 및 포트 설정을 진행합니다.
+
+### 1.1 L2 스위치 구성 요소
+
+* **Backbone L2 (Switch13):** 라우터(R1, R2)와 코어 스위치(MSW1, MSW2) 간의 물리적 풀 메쉬(Full Mesh) 연결을 중계하는 역할을 수행합니다.
+* **HQ User L2 (Left):** 본사 사용자(임원실, 마케팅, 전략기획, R&D)를 수용하며, 부서별 보안을 위해 VLAN 10, 30, 40, 50을 분리하여 할당합니다.
+* **HQ Server L2 (Center):** 본사 서버팜(그룹웨어, 개발, 메일, 보안서버)을 수용하며, 서버 전용 대역인 VLAN 20을 할당합니다.
+* **Branch L2 (Right):** 지사 사용자와 장비를 수용하며, VLAN 150, 160(상단) 및 170, 180(하단)으로 구분합니다.
+
+---
+
+## 2. 장비별 상세 CLI 구성 (L2 Configuration)
+
+### 2.1 Internet Backbone L2 Switch (Switch13)
+
+라우터와 코어 스위치 간의 Point-to-Point L3 연결을 물리적으로 중계합니다. 별도의 VLAN 태깅 없이 단순히 패킷을 전달하는 역할이므로, 모든 포트를 기본 VLAN 1에 Access 모드로 설정하여 연결성을 보장합니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname Switch13
+
+! -- 1. 연결 포트 활성화 (R1, R2, MSW1, MSW2 연결) --
+! 라우티드 포트 간의 브리지 역할이므로 Access Mode 사용
+Switch13(config)# interface range FastEthernet0/1 - 24
+Switch13(config-if-range)# description Link_to_Routers_and_Cores
+Switch13(config-if-range)# switchport mode access
+Switch13(config-if-range)# switchport access vlan 1
+Switch13(config-if-range)# no shutdown
+Switch13(config-if-range)# exit
+
+! -- 2. GigabitUplink (필요 시) --
+Switch13(config)# interface range GigabitEthernet0/1 - 2
+Switch13(config-if-range)# no shutdown
+Switch13(config-if-range)# end
+Switch13# write memory
+
+```
+
+### 2.2 HQ User Access L2 Switch (좌측: 임원, 전략, R&D 등)
+
+도면 좌측 하단의 스위치로, 부서별로 서로 다른 VLAN(10, 30, 40, 50)을 할당하여 네트워크를 논리적으로 분리합니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname HQ_Access_User
+
+! -- 1. VLAN 생성 --
+HQ_Access_User(config)# vlan 10
+HQ_Access_User(config-vlan)# name Dept_Imwon_Mkt
+HQ_Access_User(config-vlan)# exit
+HQ_Access_User(config)# vlan 30
+HQ_Access_User(config-vlan)# name Dept_Strategy
+HQ_Access_User(config-vlan)# exit
+HQ_Access_User(config)# vlan 40
+HQ_Access_User(config-vlan)# name Dept_RnD
+HQ_Access_User(config-vlan)# exit
+HQ_Access_User(config)# vlan 50
+HQ_Access_User(config-vlan)# name Spare_Vlan
+HQ_Access_User(config-vlan)# exit
+
+! -- 2. Uplink 설정 (To MSW Core - Trunk) --
+HQ_Access_User(config)# interface range GigabitEthernet0/1 - 2
+HQ_Access_User(config-if-range)# description Uplink_to_MSW
+HQ_Access_User(config-if-range)# switchport trunk encapsulation dot1q
+HQ_Access_User(config-if-range)# switchport mode trunk
+HQ_Access_User(config-if-range)# no shutdown
+HQ_Access_User(config-if-range)# exit
+
+! -- 3. Access Port 할당 (부서별 분배) --
+! 임원실/마케팅 -> VLAN 10
+HQ_Access_User(config)# interface range FastEthernet0/1 - 5
+HQ_Access_User(config-if-range)# description User_Imwon_Marketing
+HQ_Access_User(config-if-range)# switchport mode access
+HQ_Access_User(config-if-range)# switchport access vlan 10
+HQ_Access_User(config-if-range)# spanning-tree portfast
+HQ_Access_User(config-if-range)# no shutdown
+HQ_Access_User(config-if-range)# exit
+
+! 전략기획 -> VLAN 30
+HQ_Access_User(config)# interface range FastEthernet0/6 - 10
+HQ_Access_User(config-if-range)# description User_Strategy
+HQ_Access_User(config-if-range)# switchport mode access
+HQ_Access_User(config-if-range)# switchport access vlan 30
+HQ_Access_User(config-if-range)# spanning-tree portfast
+HQ_Access_User(config-if-range)# no shutdown
+HQ_Access_User(config-if-range)# exit
+
+! R&D -> VLAN 40
+HQ_Access_User(config)# interface range FastEthernet0/11 - 15
+HQ_Access_User(config-if-range)# description User_RnD
+HQ_Access_User(config-if-range)# switchport mode access
+HQ_Access_User(config-if-range)# switchport access vlan 40
+HQ_Access_User(config-if-range)# spanning-tree portfast
+HQ_Access_User(config-if-range)# no shutdown
+HQ_Access_User(config-if-range)# exit
+
+! 예비 포트 -> VLAN 50
+HQ_Access_User(config)# interface range FastEthernet0/16 - 24
+HQ_Access_User(config-if-range)# description Spare_Ports
+HQ_Access_User(config-if-range)# switchport mode access
+HQ_Access_User(config-if-range)# switchport access vlan 50
+HQ_Access_User(config-if-range)# no shutdown
+HQ_Access_User(config-if-range)# end
+
+```
+
+### 2.3 HQ Server Access L2 Switch (중앙: 서버팜)
+
+도면 중앙 하단의 스위치로, 서버들이 위치한 VLAN 20을 전용으로 처리합니다.
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname HQ_Access_Server
+
+! -- 1. VLAN 생성 --
+HQ_Access_Server(config)# vlan 20
+HQ_Access_Server(config-vlan)# name Server_Farm
+HQ_Access_Server(config-vlan)# exit
+
+! -- 2. Uplink 설정 (To MSW Core - Trunk) --
+HQ_Access_Server(config)# interface range GigabitEthernet0/1 - 2
+HQ_Access_Server(config-if-range)# description Uplink_to_MSW
+HQ_Access_Server(config-if-range)# switchport trunk encapsulation dot1q
+HQ_Access_Server(config-if-range)# switchport mode trunk
+HQ_Access_Server(config-if-range)# no shutdown
+HQ_Access_Server(config-if-range)# exit
+
+! -- 3. Access Port 할당 (서버 전체) --
+HQ_Access_Server(config)# interface range FastEthernet0/1 - 24
+HQ_Access_Server(config-if-range)# description Link_to_Servers
+HQ_Access_Server(config-if-range)# switchport mode access
+HQ_Access_Server(config-if-range)# switchport access vlan 20
+HQ_Access_Server(config-if-range)# spanning-tree portfast
+HQ_Access_Server(config-if-range)# no shutdown
+HQ_Access_Server(config-if-range)# end
+
+```
+
+### 2.4 Branch VLAN L2 Switches (지사 우측)
+
+지사 라우팅 스위치(L3_Branch) 하단에 연결되는 두 대의 L2 스위치입니다.
+
+#### **A. Branch Upper Switch (VLAN 150, 160)**
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname Branch_SW_Upper
+
+! -- 1. VLAN 생성 --
+Branch_SW_Upper(config)# vlan 150
+Branch_SW_Upper(config-vlan)# name Branch_User_A
+Branch_SW_Upper(config-vlan)# exit
+Branch_SW_Upper(config)# vlan 160
+Branch_SW_Upper(config-vlan)# name Branch_User_B
+Branch_SW_Upper(config-vlan)# exit
+
+! -- 2. Uplink (To L3_Branch) --
+Branch_SW_Upper(config)# interface GigabitEthernet0/1
+Branch_SW_Upper(config-if)# description Uplink_to_Branch_Core
+Branch_SW_Upper(config-if)# switchport mode trunk
+Branch_SW_Upper(config-if)# no shutdown
+Branch_SW_Upper(config-if)# exit
+
+! -- 3. Access Port 할당 --
+! PC9 연결 등 (VLAN 150)
+Branch_SW_Upper(config)# interface range FastEthernet0/1 - 10
+Branch_SW_Upper(config-if-range)# switchport mode access
+Branch_SW_Upper(config-if-range)# switchport access vlan 150
+Branch_SW_Upper(config-if-range)# spanning-tree portfast
+Branch_SW_Upper(config-if-range)# no shutdown
+Branch_SW_Upper(config-if-range)# exit
+
+! 예비 (VLAN 160)
+Branch_SW_Upper(config)# interface range FastEthernet0/11 - 24
+Branch_SW_Upper(config-if-range)# switchport mode access
+Branch_SW_Upper(config-if-range)# switchport access vlan 160
+Branch_SW_Upper(config-if-range)# no shutdown
+Branch_SW_Upper(config-if-range)# end
+
+```
+
+#### **B. Branch Lower Switch (VLAN 170, 180)**
+
+```bash
+Switch> enable
+Switch# configure terminal
+Switch(config)# hostname Branch_SW_Lower
+
+! -- 1. VLAN 생성 --
+Branch_SW_Lower(config)# vlan 170
+Branch_SW_Lower(config-vlan)# name Branch_Service_A
+Branch_SW_Lower(config-vlan)# exit
+Branch_SW_Lower(config)# vlan 180
+Branch_SW_Lower(config-vlan)# name Branch_Service_B
+Branch_SW_Lower(config-vlan)# exit
+
+! -- 2. Uplink (To L3_Branch) --
+Branch_SW_Lower(config)# interface GigabitEthernet0/1
+Branch_SW_Lower(config-if)# description Uplink_to_Branch_Core
+Branch_SW_Lower(config-if)# switchport mode trunk
+Branch_SW_Lower(config-if)# no shutdown
+Branch_SW_Lower(config-if)# exit
+
+! -- 3. Access Port 할당 --
+! VLAN 170
+Branch_SW_Lower(config)# interface range FastEthernet0/1 - 10
+Branch_SW_Lower(config-if-range)# switchport mode access
+Branch_SW_Lower(config-if-range)# switchport access vlan 170
+Branch_SW_Lower(config-if-range)# no shutdown
+Branch_SW_Lower(config-if-range)# exit
+
+! VLAN 180
+Branch_SW_Lower(config)# interface range FastEthernet0/11 - 24
+Branch_SW_Lower(config-if-range)# switchport mode access
+Branch_SW_Lower(config-if-range)# switchport access vlan 180
+Branch_SW_Lower(config-if-range)# no shutdown
+Branch_SW_Lower(config-if-range)# end
+
+```
 
 Next Level : AWS VPC 생성 및 Site-to-Site VPN 연결 설정
